fix stretch issue again

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2454,8 +2454,8 @@ Cover
   /* height: 100%; */
   max-width: auto;
   /* max-width: 100%; */
-  height: 60%;
-    /* max-height: 100%; */
+  /* height: 60%; */
+    max-height: 60%;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
@@ -2470,6 +2470,7 @@ Cover
   right: 0;
   margin: 0 auto;
   max-width: 100%;
+  height:auto;
   background-color: #18181c;
   padding: 5px 5px;
   -webkit-transition: all ease-in-out 0.4s;
